[package]
name = "RS_003_SERVER_TEST"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.8"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.16.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version="0.3.8", features = ["env-filter"] }
tower = "0.4.11"
hyper = { version = "0.14.16", features = ["full"] }
mime = "0.3.16"
anyhow = "1.0.56"
thiserror = "1.0.30"
